--- a/SopadeLetras5/src/css/estiloInicio.css
+++ b/SopadeLetras5/src/css/estiloInicio.css
@@ -19,7 +19,7 @@ and open the template in the editor.
     -fx-font-weight: bold;
 }
 
-.button{
+#btnJugar{
     -fx-background-color: 
         linear-gradient(#ffd65b, #e68400),
         linear-gradient(#ffef84, #f2ba44),
@@ -36,4 +36,10 @@ and open the template in the editor.
 
 .textfield{
     
+}
+
+#tablero{
+    -fx-border-color:red;
+    -fx-border-width:0;
+    -fx-grid-lines-visible:true;
 }
